# Elvex

./: 20210328-try-me.sh  A  AUTHOR  AUTHORS  AUTHORS.md  CMakeCache.txt  CMakeLists.txt  INSTALL  INSTALL.md  Makefile  Makefile.am  Makefile.in  Makefile.test  README.md  bitset.hh  buildlexicon.cc  cmake_install.cmake  completeLefff.pl  configure  configure.ac  detruire.html  entries.hh  entry.cc  environment.hh  feature.cc  features.cc  features.hh  flags.hh  forest.cc  forestidentifier.cc  fr-1.0.3.grammar  fr-1.0.3.local-lexicon  fr-1.0.3.pro.grammar  fr-1.0.3.rhetoric.grammar  fr-1.0.3.time.grammar  gdb.ex  grammar.cc  grammar.hh  id.cc  index.php  (+22 more)
app/Controllers/: AuthController.php  HomeController.php
app/Core/: Database.php  View.php
app/Models/: Project.php
app/Views/: home.php  simple_page.php
app/Views/layouts/: main.php
app/Views/partials/: auth_modals.php
data/: Makefile  Makefile.am  Makefile.in  README  README.md  adj.err  adj.grammar  adj.input  adj.lexicon  adj.rules  antonio-1.input  antonio-1.lexicon  antonio-1.rules  br-1.0.0.fsa  br-1.0.0.input  br-1.0.0.lexicon  br-1.0.0.morpho  br-1.0.0.pattern  br-1.0.0.rules  br-1.0.0.tbl  en-1.0.0.fsa  en-1.0.0.grammar  en-1.0.0.input  en-1.0.0.lexicon  en-1.0.0.morpho  en-1.0.0.pattern  en-1.0.0.tbl  en-1.1.0.fsa  en-1.1.0.grammar  en-1.1.0.html  en-1.1.0.input  en-1.1.0.lexicon  en-1.1.0.morpho  en-1.1.0.output  en-1.1.0.pattern  en-1.1.0.rules  en-1.1.0.tbl  essai-20221012.fsa  essai-20221012.input  essai-20221012.lexicon  (+124 more)
data.local/: Makefile  adj.lexicon  adj.rules  antonio-1.input  antonio-1.rules  en-1.1.0.fsa  en-1.1.0.input  en-1.1.0.lexicon  en-1.1.0.pattern  essai-20221012.morpho  essai-20221012.rules  essai-20221012.tmp-morpho  fr-1.0.4.arguments.rules  fr-1.0.4.lexicon  fr-1.0.4.modality.rules  fr-1.0.4.pred.lexicon  fr-1.0.4.verb.rules  fr-20210328.arguments.rules  fr-20210328.lexicon  fr-20210328.modality.rules  fr-20210328.noun.rules  fr-20210328.tensed.rules  fr-20210328.verb.rules  fr-slang.binding.rules  fr-slang.illocution.rules  fr-slang.input  fr-slang.lexicon  fr-slang.modality.rules  fr-slang.noun.rules  fr-slang.rhetoric.rules  fr-slang.rules  fr-slang.tensed.rules  fr-slang.time.rules  greg-2.lexicon  greg-2.pattern  p10.lexicon  p10.rules  p2.input  p2.lexicon  p2.rules  (+23 more)
data.local/becker/: jail.grammar  jail.input  t-1.input  test-1.grammar  test-1.lexicon  test-2.input  test-3.grammar  test-3.lexicon  test-4-sans.html  test-4.grammar  test-4.input  test-4.lexicon  yes_2.lexicon
data.local/kalaba/: Blocks.yaml  kalaba-1.lexicon
data.local/lefff/: AUTHORS  LICENSE  Makefile  lefff.20210328.pattern  lefff.phraseology.pattern  lefff.slang.morpho  lefff.slang.pattern  lefff.weather.inhouse.pattern  lefff.weather.pattern
data.local/malaga/: Gloses.yaml  Makefile  Makefile.am  Phonology.yaml  Stems.yaml  kalaba-1.html  kalaba-1.rules  postedition  postedition.cc  postedition.ll
data/becker/: jail.lexicon  t-1.grammar~  t-1.lexicon  test-2.grammar  test-2.lexicon  test-3.input  yes_2.grammar  yes_2.input
data/kalaba/: Makefile.in  kalaba-1.input
data/lefff/: Makefile  Makefile.am  Makefile.in  lefff.bz2  lefff.general.pattern.bz2  lefff.lefff.bz2  lefff.macro  lefff.manual.pattern  lefff.manual.pattern.bz2  lefff.pattern  lefff.phaseology.pattern  lefff.phaseology.pattern.bz2  lefff.sem.pattern  lefff.slang.bz2  lefff.slang.morpho  lefff.slang.pattern  lefff.slang.pattern.bz2  lefff.weather.pattern  lefff.weather.pattern.bz2  lefff.weather.slang.pattern
data2/: README.md  antonio-1.input  antonio-1.lexicon  en-1.1.0.lexicon  essai-20221012.input  essai-20221012.lexicon  essai-20221012.pattern  fr-1.0.4.binding.rules  fr-1.0.4.illocution.rules  fr-1.0.4.input  fr-1.0.4.tensed.rules  fr-20210328.binding.rules  fr-20210328.input  fr-slang.arguments.rules  fr-slang.illocution.rules  fr-slang.lexicon  fr-slang.modality.rules  fr-slang.rules  fr-slang.sentence.rules  fr-slang.verb.rules  greg.rules  p5.rules  pdp-meteo.time.rules  test.tmp-morpho  test2.input  test2.rules  test3.input  test4.lexicon
data2/becker/: t-1.grammar  test-4-avec.html
data2/lefff/: VERSION  lefff.weather.inhouse.pattern
data2/malaga/: MorphoSyntax.yaml
doc/: Dossier-candidature-OPEN-2023.docx  doc-en.aux  doc-en.fdb_latexmk  doc-en.fls  doc-en.out  doc-en.tex  doc-fr.aux  doc-fr.out  doc-fr.tex  doc-fr.tex~
elvex/: DOCUMENTATION.md
elvex/config/: config.php
elvex_mvc/: view_log.php
elvex_mvc/config/: config.php.ini
elvex_mvc/sql/: init.sql
public/: index.php
sql/: migrate_users_password.sql
src/: Makefile  Makefile.am  Makefile.in  application.cc  application.hpp  bitset.cc  bitset.cpp  bitset.h  bitset.hh  bitset.hpp  buildlexicon.cc  buildlexicon.cpp  buildlexicon.h  buildlexicon.hh  buildlexicon.hpp  compact-lexicon-buffer.cc  compact-lexicon-buffer.cpp  compact-lexicon-buffer.hh  compact-lexicon-buffer.hpp  compact-lexicon-fsa.cc  compact-lexicon-fsa.cpp  compact-lexicon-fsa.h  compact-lexicon-fsa.hh  compact-lexicon-fsa.hpp  compact-lexicon-info.cc  compact-lexicon-info.cpp  compact-lexicon-info.h  compact-lexicon-info.hh  compact-lexicon-tree.cc  compact-lexicon-tree.cpp  compact-lexicon-tree.h  compact-lexicon-tree.hh  compact-lexicon-tree.hpp  compact-lexicon.cc  compact-lexicon.cpp  compact-lexicon.h  compact-lexicon.hh  compact-lexicon.hpp  compact-lexicon.old.cc  compact-lexicon.old.hh  (+236 more)
test/: Adj.input  Adj.rules  Base.input  Base.lexicon  Base.rules  BigLexicon.fsa  BigLexicon.morpho  BigLexicon.pattern  BigLexicon.rules  BigLexicon.tbl  Comb1.rules  Comb2.lexicon  Comb2.output  Comb2.rules  Disjunction1.output  Disjunction1.rules  Disjunction2.input  Disjunction2.output  Disjunction2.rules  Embeded.input  Embeded.lexicon  Embeded.rules  Embeded.test  En.bad.rules  En.fsa  En.good.rules  En.lexicon  En.macros  En.morpho  En.output  En.rules  En.stdin  En.tbl  Foreach.lexicon  Foreach.output  Foreach.rules  FreeLinkedVariables.output  FreeLinkedVariables.rules  FreeLinkedVariables.test  IfPos.lexicon  (+102 more)
trash/: install-Elvex.sh  term.cc
xsl/: xml2CS-dot-graph.xsl
(+9 files in other folders)
